
package corruptiongame.character;

/**
 *
 * @author p1303674
 */
public enum STATS {
    STRENGTH,
    DEFENSE,
    EVIL,
    WEIGHT,
    HEALTH;
}
