package corruptiongame.controller;

import corruptiongame.character.RPGCharacter;

public class Controller {
	protected RPGCharacter player;
	
	public Controller(RPGCharacter player){
		this.player = player;
	}
}
