package corruptiongame.states;

import corruptiongame.stateManager.State;

public class MainMenuState extends State{

	@Override
	public void init() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void update(float elapsedTime) {
		// TODO Auto-generated method stub
		
	}

}
